k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bills
  labels:
    app.kubernetes.io/name: bills-app
