k8s/ingress.yaml
# Nginx Ingress for Bills App
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bills-ingress
  namespace: bills-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://bills.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  ingressClassName: nginx
  rules:
    - host: bills.local
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: bills-api-svc
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bills-web-svc
                port:
                  number: 3000
